# ghc

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  tox.ini
.chglog/: config.yml
.github/workflows/: pull_request.yml  release.yml
examples/: example1.json  example2.md
ghc/: cli.py  exceptions.py  ghc.py  github.py  logger.py  logo.py  query.py  reporter.py  stream.py  utils.py
ghc/templates/: default.j2
tests/: utils.py
tests/fixtures/correct/: repository.json
tests/fixtures/source/: repository.json
tests/unit/: test_github.py  test_stream.py
