[tool.poetry]
name = "ghc"
version = "0.1.6"
description = "List up GitHub user / org repositories filtered by topics (ghc = GitHub Collector)"
authors = ["homoluctus <w.slife18sy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/homoluctus/ghc"
keywords = ["GitHub", "GraphQL", "Jinja2"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8"
]
packages = [
  { include = "ghc" }
]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
mypy = "^0.782"
autopep8 = "^1.5.4"
flake8 = "^3.8.3"
isort = "^5.4.2"

[tool.poetry.scripts]
ghc = 'ghc.ghc:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
